--- a/zh_HK.po
+++ b/zh_HK.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Pidgin\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-21 01:51-0400\n"
-"PO-Revision-Date: 2020-07-21 14:59+0800\n"
+"PO-Revision-Date: 2020-07-21 15:04+0800\n"
 "Last-Translator: Ambrose Li <ambrose.li@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <http://www.transifex.com/pidgin/pidgin/language/zh_HK/>\n"
 "Language: zh_HK\n"
@@ -5254,7 +5254,7 @@ msgid "Browsing the web"
 msgstr "在瀏覽網頁"
 
 msgid "Smoking"
-msgstr "正在抽菸"
+msgstr "正在抽煙"
 
 msgid "Writing"
 msgstr "正在寫作"
