--- a/zh_HK.po
+++ b/zh_HK.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Pidgin\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-21 01:51-0400\n"
-"PO-Revision-Date: 2020-07-21 15:04+0800\n"
+"PO-Revision-Date: 2020-07-21 18:03+0800\n"
 "Last-Translator: Ambrose Li <ambrose.li@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <http://www.transifex.com/pidgin/pidgin/language/zh_HK/>\n"
 "Language: zh_HK\n"
@@ -6057,7 +6057,7 @@ msgid "Warning level too high (receiver)"
 msgstr "（接收者）警告等級過高"
 
 msgid "User temporarily unavailable"
-msgstr "使用者暫時不在線上"
+msgstr "暫時無法聯絡使用者"
 
 msgid "No match"
 msgstr "沒有相符的記錄"
@@ -10162,7 +10162,7 @@ msgstr "（使用者自選）"
 # NOTE: "Pimps" means "something that is really cool"
 # XXX tentative
 msgid "Penguin Pimps"
-msgstr "企鵝之選"
+msgstr "企鵝酷品"
 
 msgid "The default Pidgin sound theme"
 msgstr "預設的 Pidgin 音效主題"
