--- a/zh_TW.po
+++ b/zh_TW.po
@@ -6057,7 +6057,7 @@ msgid "Warning level too high (receiver)"
 msgstr "（接收者）警告等級過高"
 
 msgid "User temporarily unavailable"
-msgstr "使用者暫時不在線上"
+msgstr "暫時無法聯絡使用者"
 
 msgid "No match"
 msgstr "沒有相符的記錄"
@@ -10162,7 +10162,7 @@ msgstr "（使用者自訂）"
 # NOTE: "Pimps" means "something that is really cool"
 # XXX tentative
 msgid "Penguin Pimps"
-msgstr "企鵝之選"
+msgstr "企鵝酷品"
 
 msgid "The default Pidgin sound theme"
 msgstr "預設的 Pidgin 音效主題"
