--- a/zh_HK.po
+++ b/zh_HK.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Pidgin\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-21 01:51-0400\n"
-"PO-Revision-Date: 2020-07-21 18:03+0800\n"
+"PO-Revision-Date: 2020-07-21 19:26+0800\n"
 "Last-Translator: Ambrose Li <ambrose.li@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <http://www.transifex.com/pidgin/pidgin/language/zh_HK/>\n"
 "Language: zh_HK\n"
@@ -4228,7 +4228,7 @@ msgid "Invalid XML"
 msgstr "無效的 XML"
 
 msgid "Non-matching Hosts"
-msgstr "主機名稱不相乎"
+msgstr "主機名稱不相符"
 
 msgid "Policy Violation"
 msgstr "違反了服務政策"
@@ -5116,7 +5116,7 @@ msgid "AOL does not allow your screen name to authenticate here"
 msgstr "AOL 不允許你的帳號在這裏認證"
 
 msgid "(There was an error receiving this message.  The buddy you are speaking with is probably using a different encoding than expected.  If you know what encoding he is using, you can specify it in the advanced account options for your AIM/ICQ account.)"
-msgstr "（接收這個訊息時發生了錯誤。正在跟你交談的好友很可能在使用與你想像不乎的字符編碼；如果你知道那是什麼編碼，請在你的 AIM/ICQ 帳號的「進階設定」中的「編碼」欄位指定。）"
+msgstr "（接收這個訊息時發生了錯誤。正在跟你交談的好友很可能在使用與你想像不符的字符編碼；如果你知道那是什麼編碼，請在你的 AIM/ICQ 帳號的「進階設定」中的「編碼」欄位指定。）"
 
 #, c-format
 msgid "(There was an error receiving this message.  Either you and %s have different encodings selected, or %s has a buggy client.)"
