--- a/zh_HK.po
+++ b/zh_HK.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Pidgin\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-21 01:51-0400\n"
-"PO-Revision-Date: 2020-07-21 19:26+0800\n"
+"PO-Revision-Date: 2020-07-22 04:19+0800\n"
 "Last-Translator: Ambrose Li <ambrose.li@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <http://www.transifex.com/pidgin/pidgin/language/zh_HK/>\n"
 "Language: zh_HK\n"
@@ -151,10 +151,10 @@ msgid "%s%s%s%s wants to add %s to his or her buddy list%s%s"
 msgstr "使用者 %s%s%s%s 想要將 %s 加入他（她）的好友清單%s%s。"
 
 msgid "Authorize buddy?"
-msgstr "給予認證？"
+msgstr "允許？"
 
 msgid "Authorize"
-msgstr "給予認證"
+msgstr "允許"
 
 msgid "Deny"
 msgstr "拒絕"
