--- a/zh_HK.po
+++ b/zh_HK.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Pidgin\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-21 01:51-0400\n"
-"PO-Revision-Date: 2020-07-22 14:32+0800\n"
+"PO-Revision-Date: 2020-07-22 21:24+0800\n"
 "Last-Translator: Ambrose Li <ambrose.li@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <http://www.transifex.com/pidgin/pidgin/language/zh_HK/>\n"
 "Language: zh_HK\n"
@@ -2228,7 +2228,7 @@ msgstr ""
 "（只發生在未與傳送者進行交談的情況下）"
 
 msgid "Create a new directory for each user"
-msgstr "給每個使用者建立該使用者專用的目綠"
+msgstr "給每個使用者建立該使用者專用的目錄"
 
 msgid "Escape the filenames"
 msgstr "逸出檔案名稱中的特別字符"
