--- a/guifications2/zh_HK.po
+++ b/guifications2/zh_HK.po
@@ -1,4 +1,4 @@
-# Chinese (traditional) translation for Guifications.
+# Chinese (Hong Kong) translation for Guifications.
 # Copyright (C) 2004 Gary Kramlich
 # This file is distributed under the same license as the Guifications package.
 # Ambrose Li <acli@ada.dhs.org>, 2004-2006.
@@ -10,9 +10,9 @@ msgstr ""
 "Project-Id-Version: guifications 2.13beta5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-16 00:37-0500\n"
-"PO-Revision-Date: 2006-11-24 01:56-0500\n"
+"PO-Revision-Date: 2020-07-27 22:57+0800\n"
 "Last-Translator: Ambrose Li <acli@ada.dhs.org>\n"
-"Language-Team: Chinese (Traditional) <zh-l10n@linux.org.tw>\n"
+"Language-Team: Chinese (Hong Kong) <http://www.transifex.com/pidgin/pidgin/language/zh_HK/>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -102,12 +102,12 @@ msgstr "請為（個別）好友「%s」選擇一個主題"
 #: ../src/gf_blist.c:161
 #, c-format
 msgid "Please select a theme for the contact %s"
-msgstr "請為好友（群組）「%s」選擇一個主題"
+msgstr "請為好友（羣組）「%s」選擇一個主題"
 
 #: ../src/gf_blist.c:165
 #, c-format
 msgid "Please select a theme for the group %s"
-msgstr "請為「%s」群組選擇一個主題"
+msgstr "請為「%s」羣組選擇一個主題"
 
 #: ../src/gf_blist.c:175
 msgid "_Theme"
@@ -199,7 +199,7 @@ msgstr "即時訊息"
 
 #: ../src/gf_event.c:687
 msgid "Displayed when someone sends you a message."
-msgstr "有人對您送出訊息時顯示通知。"
+msgstr "有人對你送出訊息時顯示通知。"
 
 #  XXX 暫譯
 #: ../src/gf_event.c:689
@@ -209,7 +209,7 @@ msgstr "輸入訊息"
 #  XXX 暫譯
 #: ../src/gf_event.c:690
 msgid "Displayed when someone is typing a message to you."
-msgstr "有人開始輸入給您的訊息時顯示通知。"
+msgstr "有人開始輸入給你的訊息時顯示通知。"
 
 #  XXX 暫譯
 #: ../src/gf_event.c:692
@@ -219,7 +219,7 @@ msgstr "停止輸入"
 #  XXX 暫譯
 #: ../src/gf_event.c:693
 msgid "Displayed when someone has stopped typing a message to you."
-msgstr "有人停止輸入給您的訊息時顯示通知。"
+msgstr "有人停止輸入給你的訊息時顯示通知。"
 
 #: ../src/gf_event.c:696
 msgid "Chat message"
@@ -231,11 +231,11 @@ msgstr "有人在聊天室內說話時顯示通知。"
 
 #: ../src/gf_event.c:699
 msgid "Name spoken"
-msgstr "有人提到您的名字"
+msgstr "有人提到你的名字"
 
 #: ../src/gf_event.c:700
 msgid "Displayed when someone says your nick in a chat"
-msgstr "有人在聊天室內提到您的暱稱時顯示通知。"
+msgstr "有人在聊天室內提到你的網名時顯示通知。"
 
 #: ../src/gf_event.c:704
 msgid "Displayed when someone joins a chat."
@@ -256,7 +256,7 @@ msgstr "被邀"
 
 #: ../src/gf_event.c:711
 msgid "Displayed when someone invites you to a chat."
-msgstr "有人邀請您加入聊天室時顯示通知。"
+msgstr "有人邀請你加入聊天室時顯示通知。"
 
 #: ../src/gf_event.c:714
 msgid "Topic changed"
@@ -272,7 +272,7 @@ msgstr "電子郵件"
 
 #: ../src/gf_event.c:719
 msgid "Displayed when you receive new email."
-msgstr "您收到新郵件時顯示通知。"
+msgstr "你收到新郵件時顯示通知。"
 
 #  NOTE (23:29:48) grim: theme editor only..
 #  NOTE (23:30:10) grim: when a theme has one, whenever a new notification is created, the contents of the master notification are copied to the new notification
